<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_fav"
        android:icon="@drawable/fav_disable"
        android:title="@string/favorites"
        android:iconifiedByDefault="false"
        app:showAsAction="ifRoom"/>
</menu>