<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="date" type="id" />
    <item name="home_team" type="id" />
    <item name="home_score" type="id" />
    <item name="away_score" type="id" />
    <item name="away_team" type="id" />
    <item name="spinner" type="id" />
    <item name="recycler_view" type="id" />
    <item name="progress_bar" type="id" />
    <item name="logo_home" type="id" />
    <item name="logo_away" type="id" />
    <item name="list_event" type="id" />
    <item name="list_fav" type="id" />
    <item name="menu_bnv" type="id" />
    <item name="menu_last" type="id" />
    <item name="menu_next" type="id" />
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="team_informed" type="id" />
    <item name="team_stadium" type="id" />
    <item name="team_stadium_thumb" type="id" />
    <item name="team_desc" type="id" />
    <item name="player_image" type="id" />
    <item name="player_name" type="id" />
    <item name="player_position" type="id" />
    <item name="list_player" type="id" />
    <item name="search_view" type="id" />
    <item name="bnv_event_fav" type="id" />
    <item name="menu_event_fav" type="id" />
    <item name="empty_team" type="id" />
</resources>